--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,33 @@
-# Ignore service account credentials
-backend/firebase-service-account.json
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+
+# Node
+node_modules/
+npm-debug.log
+build/
+dist/
+
+# Secrets
+.env
+*.env
+.env.*
+firebase-service-account.json
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+
+# Media
+*.png
+*.jpg
+*.jpeg
+*.gif
