--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,14 @@
     "@mui/material": "^7.3.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/recharts": "^1.8.29",
     "axios": "^1.11.0",
     "cross-env": "^10.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.1",
     "react-scripts": "^5.0.1",
+    "recharts": "^3.1.2",
     "web-vitals": "^5.1.0"
   },
   "browserslist": {
